# tag-version

./: .coderabbit.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  output.txt  pyproject.toml  pytest.ini
.github/workflows/: dependency_review.yaml  tests.yml
src/tag_version/: cli.py  constants.py  core.py
src/tag_version/tag-version/: cli.py
src/tagger_it_at_m/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_cli_pytest.py  test_integration.py  test_tagger.py
